feat: add gitlab ci and refine interface ShxFontContentData - change property name from baseUp to height and from baseDown to width in interface ShxFontContentData again

--- a/examples/index.html
+++ b/examples/index.html
@@ -291,8 +291,8 @@
                 this.modalShape = document.getElementById('modalShape');
                 this.modalCharacterInfo = document.getElementById('modalCharacterInfo');
                 this.font = null;
-                this.fontLibraryUrl = 'https://raw.githubusercontent.com/mlight-lee/cad-data/main/fonts/fonts.json';
-                this.fontBaseUrl = 'https://raw.githubusercontent.com/mlight-lee/cad-data/main/fonts/';
+                this.fontLibraryUrl = 'https://mlightcad.gitlab.io/cad-data/fonts/fonts.json';
+                this.fontBaseUrl = 'https://mlightcad.gitlab.io/cad-data/fonts/';
                 this.allCharacterCells = new Map(); // Store all character cells
 
                 this.init();
